--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,19 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css?family=Poppins:300,400,700"
+      href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css?family=Bungee+Inline:300,400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Righteous:300,400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bangers:300,400,700"
       rel="stylesheet"
     />
     <link
